...
                                <color key="backgroundColor" red="0.76427215339999999" green="0.63443940880000005" blue="0.61007863279999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="DF3-gM-dfK"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="TLX-Cg-wci"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="CONTINUE">
                                    <color key="titleColor" red="0.18194511529999999" green="0.18197810649999999" blue="0.18194061519999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="verifyEmailAction:" destination="Qaj-S2-KAe" eventType="touchUpInside" id="gCg-N8-O9k"/>
                                </connections>
                            </button>
...
                                                    <action selector="shareYourLocation:" destination="INO-hG-Dgu" eventType="touchUpInside" id="vDB-lw-PjL"/>
                                                </connections>
                                            </button>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1X-Iz-wMU">
                                                <rect key="frame" x="0.0" y="0.0" width="290" height="66"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avb-iB-isK">
                                                        <rect key="frame" x="16" y="27" width="266" height="31"/>
                                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8of-Ef-7Mm">
...
                        <viewControllerLayoutGuide type="bottom" id="l3F-y3-niA"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="29i-TS-d5A">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verification code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kt4-K7-dYj" customClass="MDCTextField">
                                <rect key="frame" x="16" y="139" width="382" height="68"/>
                                <color key="tintColor" systemColor="darkTextColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="68" id="X7r-tO-rKf"/>
                                    <constraint firstAttribute="height" constant="68" id="t6I-7I-s5D"/>
                                </constraints>
...
