
/* Class = "UITextField"; placeholder = "Country Code"; ObjectID = "0xl-hQ-lb6"; */
"0xl-hQ-lb6.placeholder" = "Country Code";

/* Class = "UITextField"; placeholder = "Country Name"; ObjectID = "XSp-D3-v8K"; */
"XSp-D3-v8K.placeholder" = "Country Name";

/* Class = "UITextField"; placeholder = "Phone Number"; ObjectID = "XjV-zf-RNA"; */
"XjV-zf-RNA.placeholder" = "Phone Number";
