...
    private let emergencyCounterPresenter = EmergencyCounterPresenter()

    // MARK: Protocol START

    func showError(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { (_) in
            self.dismiss(animated: true, completion: nil)
        }))
        alert.display()
    }

    func nowOnEmergencyState() {
...
