...
"Change image" = "Change image";

"Add profile photo" = "Add profile photo";

"All fields need to be filled to register." = "All fields need to be filled to register.";

"My Location" = "My Location";

"Invitation Sent" = "Invitation Sent";

"The invitation was sent correctly to email" = "The invitation was sent correctly to email";

"Your device" = "Your device";

"Would you like to invite someone to follow this device?" =
"Would you like to invite someone to follow this device?";

"Yes, invite" = "Yes, invite";

"Access" = "Access";

"Enter the email of the person you want to invite:" = "Enter the email of the person you want to invite:";

"Send" = "Send";
...
